--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
         <nav></nav>
     </header>
 
-    <main class="container">
+    <main class="container text-center m-auto">
         <h1 class="text-center pt-5 pb-5 bg-primary ">Welcome To Mobile Library</h1>
 
 
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        <div class="input-group pt-5 pb-5">
+            <input type="text" class="form-control " id="search-field" placeholder="Recipient's username"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="allPhone()" class="btn btn-outline-secondary" type="button"
+                id="search-button">Button</button>
         </div>
 
         <div class="container overflow-hidden">
