--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 id="search-button">Button</button>
         </div>
 
-        <div class="container overflow-hidden">
+        <div class="container overflow-hidden ">
             <div class="row gy-5">
-                <div class="col-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+                <div id="phone-container" class="col-4 phone-container">
+
                 </div>
                 <div class="col-4">
                     <div class="p-3 border bg-light">Custom column padding</div>
