--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 id="search-button">Button</button>
         </div>
 
+        <div id="details-container"
+            class="details-container modal-dialog modal-dialog-centered modal-dialog-scrollable">
+
+        </div>
+
         <div class="container overflow-hidden ">
             <div class="row gy-5">
                 <div id="phone-container" class="col-4 phone-container">
