--- a/index.html
+++ b/index.html
@@ -11,43 +11,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- linked stylesheet -->
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
 
     <header>
-        <nav></nav>
+        <!-- header section  -->
+        <header>
+            <h1 class="text-uppercase text-center fw-bold  bg-primary m-3 p-2 text-white">
+                Mobile Phone Library
+            </h1>
+        </header>
+        <!-- add a marguee for fun  -->
+        <marquee class="text-uppercase font-monospace fw-bold fs-3" width="95%" direction="left" height="100px">
+            Welcome to our online Mobile Library. Search Your Phone and Improve your outlooks.
+        </marquee>
     </header>
 
-    <main class="container text-center m-auto">
-        <h1 class="text-center pt-5 pb-5 bg-primary ">Welcome To Mobile Library</h1>
+    <main>
 
-
-        <div class="input-group pt-5 pb-5">
-            <input type="text" class="form-control " id="search-field" placeholder="Recipient's username"
-                aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="allPhone()" class="btn btn-outline-secondary" type="button"
-                id="search-button">Button</button>
-        </div>
-
-        <div id="details-container"
-            class="details-container modal-dialog modal-dialog-centered modal-dialog-scrollable">
-
-        </div>
-
-        <div class="container overflow-hidden ">
-            <div class="row gy-5">
-                <div id="phone-container" class="col-4 phone-container">
-
-                </div>
-                <div class="col-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-            </div>
-        </div>
     </main>
     <footer>
     </footer>
