input filed and button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     </header>
 
     <main>
+        <!-- search field and button -->
+        <section>
+            <div class="input-group mb-3 w-75 mx-auto">
+                <input id="search-input" type="text" class="form-control" placeholder="Search Your Phone" />
+                <button onclick="getPhones()" class="btn btn-success" type="button" id="search-button">Search</button>
+            </div>
+
+            <!-- Empty input error handaling  -->
+            <h3 id="empty-error" class=" text-center text-danger"> Please Input a Vaild Name......!! </h3>
+        </section>
+
+
 
     </main>
     <footer>
