--- a/index.html
+++ b/index.html
@@ -42,11 +42,34 @@
             <h3 id="empty-error" class=" text-center text-danger"> Please Input a Vaild Name......!! </h3>
         </section>
 
+        <!-- phone details section  -->
+        <section>
+            <!-- can't find error handle  -->
+            <h3 id="error-input" class=" text-center text-danger"> your search item not found.......! </h3>
+
+            <!--Phone Details Display -->
+            <div id="details-display" class=" mb-3 w-50 mx-auto  ">
+            </div>
+        </section>
+
+        <section class="mt-5  ">
+            <!-- Add Spiner -->
+            <div class="d-flex justify-content-center align-content-center">
+                <div id="spinner" class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+
+            <!-- display phones  -->
+            <div id="phones" class="row border-0 g-5">
+            </div>
+        </section>
 
 
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
+
+    <!-- Add javaScript  -->
     <script src="./js/app.js"></script>
 </body>
 
