--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Library</title>
+    <title>My Mobile Library</title>
 
     <!-- Bootsrap linked -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -53,7 +53,7 @@
         </section>
 
         <section class="mt-5  ">
-            <!-- Add Spiner -->
+            <!-- Add Sppiner -->
             <div class="d-flex justify-content-center align-content-center">
                 <div id="spinner" class="spinner-border" role="status">
                     <span class="visually-hidden">Loading...</span>
